# quantum_dice_root

./: MANIFEST.in  paiqm_game.yaml  pyproject.toml  setup.py
.github/workflows/: build.yml
quantum_dice_game/: .gitignore  __main__.py  dice_game_console.py  dice_game_gui.py  dice_game_main.py  game.py
quantum_dice_game.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
quantum_dice_game/engines/: ai_engine.py  backend_engine.py  bullets_shared.py  custom_widgets.py  env_detection.py  generate_superposition_equations.py  resource_path.py
quantum_dice_game/pages/: login_page.py  page_0.py  page_1.py  page_2.py  page_3.py  page_4.py  page_5.py
quantum_dice_game/resource_folder_gen/: counts.pkl  created_circuit.pkl  iam_response.pkl  keys.txt
tools/: build_manifest.py
