[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-dice-game"
version = "1.3.6"
description = "Quantum Dice Game"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qiskit",
    "matplotlib",
    "requests",
    "scipy",
    "qiskit_ibm_runtime",
    "qiskit_aer",
    "numpy",
    "PyQt5",
    "pylatexenc"
]
